# enterprise-context-spec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: faq.md  getting-started.md
enterprise_context/: __init__.py  cli.py  loader.py  merger.py  validator.py
enterprise_context/schemas/: __init__.py  company.schema.json  division.schema.json  team.schema.json
examples/enterprise/: company-context.md  customer-portal-team-context.md  operations-division-context.md
examples/insurance/: claims-division-context.md  company-context.md  motor-claims-team-context.md
integrations/a2a/: README.md  agent_card.json  server.py
integrations/langchain/: README.md
integrations/seedcraft/: README.md
spec/v1/: README.md  division.schema.json
templates/: company-context.md  division-context.md  team-context.md
tools/: merge.py  validate.py
